--- a/.github/workflows/deploy .yml
+++ b/.github/workflows/deploy .yml
@@ -71,7 +71,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Get the content of algolia.json as config
         id: algolia_config
-        run: ehcho "::set-output name=config::$(cat crawlerConfig.json | jq -r tostring)"
+        run: echo "::set-output name=config::$(cat crawlerConfig.json | jq -r tostring)"
       - name: Push indices to Algolia
         uses: signcl/docsearch-scraper-action@master
         env:
