--- a/docs/crawlerConfig.json
+++ b/docs/crawlerConfig.json
@@ -1,10 +1,10 @@
 {
-  "index_name": "doc-demo",
+  "index_name": "docs-demo",
   "start_urls":  "https://galgaxy3.github.io/docs-demo/",
   "rateLimit": 8,
   "maxDepth": 10,
   "selectors": {
-    "kv10": {
+    "lvl0": {
       "selector": "",
       "defaultValue": "Documentation"
     },
