--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,17 +64,17 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-  #algolia
-  algolia:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Get the content of algolia.json as config
-        id: algolia_config
-        run: echo "config=$(cat crawlerConfig.json | jq -r tostring)" >> $GITHUB_OUTPUT
-      - name: Push indices to Algolia
-        uses: signcl/docsearch-scraper-action@master
-        env:
-          APPLICATION_ID: ${{ secrets.APPLICATION_ID }}
-          API_KEY: ${{ secrets.API_KEY }}
-          CONFIG: ${{ steps.algolia_config.outputs.config }}
+#  #algolia
+#  algolia:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Get the content of algolia.json as config
+#        id: algolia_config
+#        run: echo "config=$(cat crawlerConfig.json | jq -r tostring)" >> $GITHUB_OUTPUT
+#      - name: Push indices to Algolia
+#        uses: signcl/docsearch-scraper-action@master
+#        env:
+#          APPLICATION_ID: ${{ secrets.APPLICATION_ID }}
+#          API_KEY: ${{ secrets.API_KEY }}
+#          CONFIG: ${{ steps.algolia_config.outputs.config }}
